// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bar responsive 1`] = `
.c4 {
  fill: rgb(152,0,67);
}

.c6 {
  fill: rgb(221,28,119);
}

.c3 {
  fill: none;
  stroke: rgb(152,0,67);
  stroke-width: 3;
  pointer-events: none;
}

.c5 {
  fill: none;
  stroke: rgb(221,28,119);
  stroke-width: 3;
  pointer-events: none;
}

.c1 {
  fill: rgb(8,104,172);
}

.c1:hover {
  fill: rgb(0,84,152);
}

.c2 {
  fill: rgb(67,162,202);
}

.c2:hover {
  fill: rgb(47,142,182);
}

.c0 {
  height: 360px;
  width: 640px;
}

<svg
  baseProfile="full"
  class="silky-charts c0"
  id="silky-charts_bar-line-4"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    class="silky-charts-container "
    transform="translate(50, 40)"
  >
    <g
      class="apples-layer"
    >
      <rect
        class="bar c1"
        height="111.1764705882353"
        width="118.53658536585367"
        x="144.87804878048777"
        y="158.8235294117647"
      />
      <rect
        class="bar c1"
        height="135"
        width="118.53658536585367"
        x="276.5853658536585"
        y="135"
      />
      <rect
        class="bar c1"
        height="142.94117647058823"
        width="118.53658536585367"
        x="13.170731707317032"
        y="127.05882352941177"
      />
      <rect
        class="bar c1"
        height="111.1764705882353"
        width="118.53658536585367"
        x="408.29268292682923"
        y="158.8235294117647"
      />
    </g>
    <g
      class="bananas-layer"
    >
      <rect
        class="bar c2"
        height="111.1764705882353"
        width="118.53658536585367"
        x="144.87804878048777"
        y="47.64705882352942"
      />
      <rect
        class="bar c2"
        height="103.23529411764707"
        width="118.53658536585367"
        x="276.5853658536585"
        y="31.764705882352956"
      />
      <rect
        class="bar c2"
        height="127.05882352941177"
        width="118.53658536585367"
        x="13.170731707317032"
        y="0"
      />
      <rect
        class="bar c2"
        height="103.23529411764707"
        width="118.53658536585367"
        x="408.29268292682923"
        y="55.58823529411765"
      />
    </g>
    <g
      class="axis-x "
      fill="none"
      font-family="sans-serif"
      font-size="10"
      text-anchor="middle"
      transform="translate(0, 270)"
    >
      <path
        class="domain"
        d="M0.5,6V0.5H540.5V6"
        stroke="currentColor"
      />
      <g
        class="tick"
        opacity="1"
        transform="translate(72.43902439024387,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          foo
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(204.14634146341461,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          bar
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(335.8536585365853,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          baz
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(467.56097560975604,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          qux
        </text>
      </g>
    </g>
    <g
      class="axis-y "
      fill="none"
      font-family="sans-serif"
      font-size="10"
      text-anchor="end"
    >
      <path
        class="domain"
        d="M-6,270.5H0.5V0.5H-6"
        stroke="currentColor"
      />
      <g
        class="tick"
        opacity="1"
        transform="translate(0,270.5)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          0
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,230.7941176470588)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          5
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,191.08823529411762)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          10
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,151.38235294117646)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          15
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,111.67647058823528)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          20
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,71.97058823529412)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          25
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,32.264705882352956)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          30
        </text>
      </g>
    </g>
    <g
      class="cherries-layer"
    >
      <path
        class="line-path bar-line c3"
        d="M72.43902439024387,135L204.14634146341461,119.11764705882354L335.8536585365853,127.05882352941177L467.56097560975604,254.11764705882354"
      />
      <g
        class="line-dot-group"
      >
        <circle
          class="bar-line c4"
          color="rgb(152,0,67)"
          cx="72.43902439024387"
          cy="135"
          r="6"
        />
        <circle
          class="bar-line c4"
          color="rgb(152,0,67)"
          cx="204.14634146341461"
          cy="119.11764705882354"
          r="6"
        />
        <circle
          class="bar-line c4"
          color="rgb(152,0,67)"
          cx="335.8536585365853"
          cy="127.05882352941177"
          r="6"
        />
        <circle
          class="bar-line c4"
          color="rgb(152,0,67)"
          cx="467.56097560975604"
          cy="254.11764705882354"
          r="6"
        />
      </g>
    </g>
    <g
      class="dates-layer"
    >
      <path
        class="line-path bar-line c5"
        d="M72.43902439024387,262.05882352941177L204.14634146341461,150.88235294117646L335.8536585365853,198.52941176470588L467.56097560975604,166.76470588235293"
      />
      <g
        class="line-dot-group"
      >
        <circle
          class="bar-line c6"
          color="rgb(221,28,119)"
          cx="72.43902439024387"
          cy="262.05882352941177"
          r="6"
        />
        <circle
          class="bar-line c6"
          color="rgb(221,28,119)"
          cx="204.14634146341461"
          cy="150.88235294117646"
          r="6"
        />
        <circle
          class="bar-line c6"
          color="rgb(221,28,119)"
          cx="335.8536585365853"
          cy="198.52941176470588"
          r="6"
        />
        <circle
          class="bar-line c6"
          color="rgb(221,28,119)"
          cx="467.56097560975604"
          cy="166.76470588235293"
          r="6"
        />
      </g>
    </g>
  </g>
</svg>
`;

exports[`Bar with height 1`] = `
.c4 {
  fill: rgb(152,0,67);
}

.c6 {
  fill: rgb(221,28,119);
}

.c3 {
  fill: none;
  stroke: rgb(152,0,67);
  stroke-width: 3;
  pointer-events: none;
}

.c5 {
  fill: none;
  stroke: rgb(221,28,119);
  stroke-width: 3;
  pointer-events: none;
}

.c1 {
  fill: rgb(8,104,172);
}

.c1:hover {
  fill: rgb(0,84,152);
}

.c2 {
  fill: rgb(67,162,202);
}

.c2:hover {
  fill: rgb(47,142,182);
}

.c0 {
  height: 100px;
  width: 177.77777777777777px;
}

<svg
  baseProfile="full"
  class="silky-charts c0"
  id="silky-charts_bar-line-8"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    class="silky-charts-container "
    transform="translate(50, 40)"
  >
    <g
      class="apples-layer"
    >
      <rect
        class="bar c1"
        height="4.117647058823529"
        width="17.073170731707318"
        x="20.86720867208672"
        y="5.882352941176471"
      />
      <rect
        class="bar c1"
        height="5"
        width="17.073170731707318"
        x="39.83739837398374"
        y="5"
      />
      <rect
        class="bar c1"
        height="5.294117647058823"
        width="17.073170731707318"
        x="1.8970189701896985"
        y="4.705882352941177"
      />
      <rect
        class="bar c1"
        height="4.117647058823529"
        width="17.073170731707318"
        x="58.80758807588076"
        y="5.882352941176471"
      />
    </g>
    <g
      class="bananas-layer"
    >
      <rect
        class="bar c2"
        height="4.117647058823529"
        width="17.073170731707318"
        x="20.86720867208672"
        y="1.764705882352942"
      />
      <rect
        class="bar c2"
        height="3.8235294117647056"
        width="17.073170731707318"
        x="39.83739837398374"
        y="1.1764705882352935"
      />
      <rect
        class="bar c2"
        height="4.705882352941177"
        width="17.073170731707318"
        x="1.8970189701896985"
        y="0"
      />
      <rect
        class="bar c2"
        height="3.8235294117647056"
        width="17.073170731707318"
        x="58.80758807588076"
        y="2.0588235294117654"
      />
    </g>
    <g
      class="axis-x "
      fill="none"
      font-family="sans-serif"
      font-size="10"
      text-anchor="middle"
      transform="translate(0, 10)"
    >
      <path
        class="domain"
        d="M0.5,6V0.5H78.27777777777777V6"
        stroke="currentColor"
      />
      <g
        class="tick"
        opacity="1"
        transform="translate(10.433604336043357,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          foo
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(29.40379403794038,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          bar
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(48.3739837398374,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          baz
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(67.34417344173441,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          qux
        </text>
      </g>
    </g>
    <g
      class="axis-y "
      fill="none"
      font-family="sans-serif"
      font-size="10"
      text-anchor="end"
    >
      <path
        class="domain"
        d="M-6,10.5H0.5V0.5H-6"
        stroke="currentColor"
      />
      <g
        class="tick"
        opacity="1"
        transform="translate(0,10.5)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          0
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,9.029411764705882)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          5
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,7.5588235294117645)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          10
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,6.088235294117647)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          15
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,4.617647058823529)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          20
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,3.1470588235294112)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          25
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,1.6764705882352935)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          30
        </text>
      </g>
    </g>
    <g
      class="cherries-layer"
    >
      <path
        class="line-path bar-line c3"
        d="M10.433604336043357,5L29.40379403794038,4.411764705882353L48.3739837398374,4.705882352941177L67.34417344173441,9.411764705882353"
      />
      <g
        class="line-dot-group"
      >
        <circle
          class="bar-line c4"
          color="rgb(152,0,67)"
          cx="10.433604336043357"
          cy="5"
          r="6"
        />
        <circle
          class="bar-line c4"
          color="rgb(152,0,67)"
          cx="29.40379403794038"
          cy="4.411764705882353"
          r="6"
        />
        <circle
          class="bar-line c4"
          color="rgb(152,0,67)"
          cx="48.3739837398374"
          cy="4.705882352941177"
          r="6"
        />
        <circle
          class="bar-line c4"
          color="rgb(152,0,67)"
          cx="67.34417344173441"
          cy="9.411764705882353"
          r="6"
        />
      </g>
    </g>
    <g
      class="dates-layer"
    >
      <path
        class="line-path bar-line c5"
        d="M10.433604336043357,9.705882352941176L29.40379403794038,5.588235294117647L48.3739837398374,7.352941176470589L67.34417344173441,6.176470588235294"
      />
      <g
        class="line-dot-group"
      >
        <circle
          class="bar-line c6"
          color="rgb(221,28,119)"
          cx="10.433604336043357"
          cy="9.705882352941176"
          r="6"
        />
        <circle
          class="bar-line c6"
          color="rgb(221,28,119)"
          cx="29.40379403794038"
          cy="5.588235294117647"
          r="6"
        />
        <circle
          class="bar-line c6"
          color="rgb(221,28,119)"
          cx="48.3739837398374"
          cy="7.352941176470589"
          r="6"
        />
        <circle
          class="bar-line c6"
          color="rgb(221,28,119)"
          cx="67.34417344173441"
          cy="6.176470588235294"
          r="6"
        />
      </g>
    </g>
  </g>
</svg>
`;

exports[`Bar with width 1`] = `
.c4 {
  fill: rgb(152,0,67);
}

.c6 {
  fill: rgb(221,28,119);
}

.c3 {
  fill: none;
  stroke: rgb(152,0,67);
  stroke-width: 3;
  pointer-events: none;
}

.c5 {
  fill: none;
  stroke: rgb(221,28,119);
  stroke-width: 3;
  pointer-events: none;
}

.c1 {
  fill: rgb(8,104,172);
}

.c1:hover {
  fill: rgb(0,84,152);
}

.c2 {
  fill: rgb(67,162,202);
}

.c2:hover {
  fill: rgb(47,142,182);
}

.c0 {
  height: 56.25px;
  width: 100px;
}

<svg
  baseProfile="full"
  class="silky-charts c0"
  id="silky-charts_bar-line-6"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    class="silky-charts-container "
    transform="translate(50, 40)"
  >
    <g
      class="apples-layer"
    >
      <rect
        class="bar c1"
        height="-13.897058823529413"
        width="0"
        x="0"
        y="-19.852941176470587"
      />
      <rect
        class="bar c1"
        height="-16.875"
        width="0"
        x="0"
        y="-16.875"
      />
      <rect
        class="bar c1"
        height="-17.86764705882353"
        width="0"
        x="0"
        y="-15.882352941176471"
      />
      <rect
        class="bar c1"
        height="-13.897058823529413"
        width="0"
        x="0"
        y="-19.852941176470587"
      />
    </g>
    <g
      class="bananas-layer"
    >
      <rect
        class="bar c2"
        height="-13.897058823529413"
        width="0"
        x="0"
        y="-5.9558823529411775"
      />
      <rect
        class="bar c2"
        height="-12.904411764705884"
        width="0"
        x="0"
        y="-3.9705882352941195"
      />
      <rect
        class="bar c2"
        height="-15.882352941176471"
        width="0"
        x="0"
        y="0"
      />
      <rect
        class="bar c2"
        height="-12.904411764705884"
        width="0"
        x="0"
        y="-6.9485294117647065"
      />
    </g>
    <g
      class="axis-x "
      fill="none"
      font-family="sans-serif"
      font-size="10"
      text-anchor="middle"
      transform="translate(0, -33.75)"
    >
      <path
        class="domain"
        d="M0.5,6V0.5H0.5V6"
        stroke="currentColor"
      />
      <g
        class="tick"
        opacity="1"
        transform="translate(0.5,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          foo
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0.5,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          bar
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0.5,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          baz
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0.5,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          qux
        </text>
      </g>
    </g>
    <g
      class="axis-y "
      fill="none"
      font-family="sans-serif"
      font-size="10"
      text-anchor="end"
    >
      <path
        class="domain"
        d="M-6,-33.25H0.5V0.5H-6"
        stroke="currentColor"
      />
      <g
        class="tick"
        opacity="1"
        transform="translate(0,-33.25)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          0
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,-28.28676470588235)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          5
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,-23.323529411764703)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          10
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,-18.360294117647058)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          15
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,-13.39705882352941)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          20
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,-8.433823529411764)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          25
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,-3.4705882352941195)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          30
        </text>
      </g>
    </g>
    <g
      class="cherries-layer"
    >
      <path
        class="line-path bar-line c3"
        d="M0,-16.875L0,-14.889705882352942L0,-15.882352941176471L0,-31.764705882352942"
      />
      <g
        class="line-dot-group"
      >
        <circle
          class="bar-line c4"
          color="rgb(152,0,67)"
          cx="0"
          cy="-16.875"
          r="6"
        />
        <circle
          class="bar-line c4"
          color="rgb(152,0,67)"
          cx="0"
          cy="-14.889705882352942"
          r="6"
        />
        <circle
          class="bar-line c4"
          color="rgb(152,0,67)"
          cx="0"
          cy="-15.882352941176471"
          r="6"
        />
        <circle
          class="bar-line c4"
          color="rgb(152,0,67)"
          cx="0"
          cy="-31.764705882352942"
          r="6"
        />
      </g>
    </g>
    <g
      class="dates-layer"
    >
      <path
        class="line-path bar-line c5"
        d="M0,-32.75735294117647L0,-18.860294117647058L0,-24.816176470588236L0,-20.845588235294116"
      />
      <g
        class="line-dot-group"
      >
        <circle
          class="bar-line c6"
          color="rgb(221,28,119)"
          cx="0"
          cy="-32.75735294117647"
          r="6"
        />
        <circle
          class="bar-line c6"
          color="rgb(221,28,119)"
          cx="0"
          cy="-18.860294117647058"
          r="6"
        />
        <circle
          class="bar-line c6"
          color="rgb(221,28,119)"
          cx="0"
          cy="-24.816176470588236"
          r="6"
        />
        <circle
          class="bar-line c6"
          color="rgb(221,28,119)"
          cx="0"
          cy="-20.845588235294116"
          r="6"
        />
      </g>
    </g>
  </g>
</svg>
`;

exports[`BarLine 1`] = `
.c4 {
  fill: rgb(152,0,67);
}

.c6 {
  fill: rgb(221,28,119);
}

.c3 {
  fill: none;
  stroke: rgb(152,0,67);
  stroke-width: 3;
  pointer-events: none;
}

.c5 {
  fill: none;
  stroke: rgb(221,28,119);
  stroke-width: 3;
  pointer-events: none;
}

.c1 {
  fill: rgb(8,104,172);
}

.c1:hover {
  fill: rgb(0,84,152);
}

.c2 {
  fill: rgb(67,162,202);
}

.c2:hover {
  fill: rgb(47,142,182);
}

.c0 {
  height: 360px;
  width: 640px;
}

<svg
  baseProfile="full"
  class="silky-charts c0"
  id="silky-charts_bar-line-0"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    class="silky-charts-container "
    transform="translate(50, 40)"
  >
    <g
      class="apples-layer"
    >
      <rect
        class="bar c1"
        height="111.1764705882353"
        width="118.53658536585367"
        x="144.87804878048777"
        y="158.8235294117647"
      />
      <rect
        class="bar c1"
        height="135"
        width="118.53658536585367"
        x="276.5853658536585"
        y="135"
      />
      <rect
        class="bar c1"
        height="142.94117647058823"
        width="118.53658536585367"
        x="13.170731707317032"
        y="127.05882352941177"
      />
      <rect
        class="bar c1"
        height="111.1764705882353"
        width="118.53658536585367"
        x="408.29268292682923"
        y="158.8235294117647"
      />
    </g>
    <g
      class="bananas-layer"
    >
      <rect
        class="bar c2"
        height="111.1764705882353"
        width="118.53658536585367"
        x="144.87804878048777"
        y="47.64705882352942"
      />
      <rect
        class="bar c2"
        height="103.23529411764707"
        width="118.53658536585367"
        x="276.5853658536585"
        y="31.764705882352956"
      />
      <rect
        class="bar c2"
        height="127.05882352941177"
        width="118.53658536585367"
        x="13.170731707317032"
        y="0"
      />
      <rect
        class="bar c2"
        height="103.23529411764707"
        width="118.53658536585367"
        x="408.29268292682923"
        y="55.58823529411765"
      />
    </g>
    <g
      class="axis-x "
      fill="none"
      font-family="sans-serif"
      font-size="10"
      text-anchor="middle"
      transform="translate(0, 270)"
    >
      <path
        class="domain"
        d="M0.5,6V0.5H540.5V6"
        stroke="currentColor"
      />
      <g
        class="tick"
        opacity="1"
        transform="translate(72.43902439024387,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          foo
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(204.14634146341461,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          bar
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(335.8536585365853,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          baz
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(467.56097560975604,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          qux
        </text>
      </g>
    </g>
    <g
      class="axis-y "
      fill="none"
      font-family="sans-serif"
      font-size="10"
      text-anchor="end"
    >
      <path
        class="domain"
        d="M-6,270.5H0.5V0.5H-6"
        stroke="currentColor"
      />
      <g
        class="tick"
        opacity="1"
        transform="translate(0,270.5)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          0
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,230.7941176470588)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          5
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,191.08823529411762)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          10
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,151.38235294117646)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          15
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,111.67647058823528)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          20
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,71.97058823529412)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          25
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,32.264705882352956)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          30
        </text>
      </g>
    </g>
    <g
      class="cherries-layer"
    >
      <path
        class="line-path bar-line c3"
        d="M72.43902439024387,135L204.14634146341461,119.11764705882354L335.8536585365853,127.05882352941177L467.56097560975604,254.11764705882354"
      />
      <g
        class="line-dot-group"
      >
        <circle
          class="bar-line c4"
          color="rgb(152,0,67)"
          cx="72.43902439024387"
          cy="135"
          r="6"
        />
        <circle
          class="bar-line c4"
          color="rgb(152,0,67)"
          cx="204.14634146341461"
          cy="119.11764705882354"
          r="6"
        />
        <circle
          class="bar-line c4"
          color="rgb(152,0,67)"
          cx="335.8536585365853"
          cy="127.05882352941177"
          r="6"
        />
        <circle
          class="bar-line c4"
          color="rgb(152,0,67)"
          cx="467.56097560975604"
          cy="254.11764705882354"
          r="6"
        />
      </g>
    </g>
    <g
      class="dates-layer"
    >
      <path
        class="line-path bar-line c5"
        d="M72.43902439024387,262.05882352941177L204.14634146341461,150.88235294117646L335.8536585365853,198.52941176470588L467.56097560975604,166.76470588235293"
      />
      <g
        class="line-dot-group"
      >
        <circle
          class="bar-line c6"
          color="rgb(221,28,119)"
          cx="72.43902439024387"
          cy="262.05882352941177"
          r="6"
        />
        <circle
          class="bar-line c6"
          color="rgb(221,28,119)"
          cx="204.14634146341461"
          cy="150.88235294117646"
          r="6"
        />
        <circle
          class="bar-line c6"
          color="rgb(221,28,119)"
          cx="335.8536585365853"
          cy="198.52941176470588"
          r="6"
        />
        <circle
          class="bar-line c6"
          color="rgb(221,28,119)"
          cx="467.56097560975604"
          cy="166.76470588235293"
          r="6"
        />
      </g>
    </g>
  </g>
</svg>
`;

exports[`BarLine width grid 1`] = `
.c5 {
  fill: rgb(152,0,67);
}

.c7 {
  fill: rgb(221,28,119);
}

.c1 path {
  stroke: transparent;
}

.c1 line {
  stroke: rgb(232,232,232);
}

.c4 {
  fill: none;
  stroke: rgb(152,0,67);
  stroke-width: 3;
  pointer-events: none;
}

.c6 {
  fill: none;
  stroke: rgb(221,28,119);
  stroke-width: 3;
  pointer-events: none;
}

.c2 {
  fill: rgb(8,104,172);
}

.c2:hover {
  fill: rgb(0,84,152);
}

.c3 {
  fill: rgb(67,162,202);
}

.c3:hover {
  fill: rgb(47,142,182);
}

.c0 {
  height: 360px;
  width: 640px;
}

<svg
  baseProfile="full"
  class="silky-charts c0"
  id="silky-charts_bar-line-10"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    class="silky-charts-container "
    transform="translate(50, 40)"
  >
    <g
      class="grid c1"
      fill="none"
      font-family="sans-serif"
      font-size="10"
      text-anchor="end"
    >
      <path
        class="domain"
        d="M540,270.5H0.5V0.5H540"
        stroke="currentColor"
      />
      <g
        class="tick"
        opacity="1"
        transform="translate(0,270.5)"
      >
        <line
          stroke="currentColor"
          x2="540"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-3"
        />
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,230.7941176470588)"
      >
        <line
          stroke="currentColor"
          x2="540"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-3"
        />
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,191.08823529411762)"
      >
        <line
          stroke="currentColor"
          x2="540"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-3"
        />
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,151.38235294117646)"
      >
        <line
          stroke="currentColor"
          x2="540"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-3"
        />
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,111.67647058823528)"
      >
        <line
          stroke="currentColor"
          x2="540"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-3"
        />
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,71.97058823529412)"
      >
        <line
          stroke="currentColor"
          x2="540"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-3"
        />
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,32.264705882352956)"
      >
        <line
          stroke="currentColor"
          x2="540"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-3"
        />
      </g>
    </g>
    <g
      class="apples-layer"
    >
      <rect
        class="bar c2"
        height="111.1764705882353"
        width="118.53658536585367"
        x="144.87804878048777"
        y="158.8235294117647"
      />
      <rect
        class="bar c2"
        height="135"
        width="118.53658536585367"
        x="276.5853658536585"
        y="135"
      />
      <rect
        class="bar c2"
        height="142.94117647058823"
        width="118.53658536585367"
        x="13.170731707317032"
        y="127.05882352941177"
      />
      <rect
        class="bar c2"
        height="111.1764705882353"
        width="118.53658536585367"
        x="408.29268292682923"
        y="158.8235294117647"
      />
    </g>
    <g
      class="bananas-layer"
    >
      <rect
        class="bar c3"
        height="111.1764705882353"
        width="118.53658536585367"
        x="144.87804878048777"
        y="47.64705882352942"
      />
      <rect
        class="bar c3"
        height="103.23529411764707"
        width="118.53658536585367"
        x="276.5853658536585"
        y="31.764705882352956"
      />
      <rect
        class="bar c3"
        height="127.05882352941177"
        width="118.53658536585367"
        x="13.170731707317032"
        y="0"
      />
      <rect
        class="bar c3"
        height="103.23529411764707"
        width="118.53658536585367"
        x="408.29268292682923"
        y="55.58823529411765"
      />
    </g>
    <g
      class="axis-x "
      fill="none"
      font-family="sans-serif"
      font-size="10"
      text-anchor="middle"
      transform="translate(0, 270)"
    >
      <path
        class="domain"
        d="M0.5,6V0.5H540.5V6"
        stroke="currentColor"
      />
      <g
        class="tick"
        opacity="1"
        transform="translate(72.43902439024387,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          foo
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(204.14634146341461,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          bar
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(335.8536585365853,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          baz
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(467.56097560975604,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          qux
        </text>
      </g>
    </g>
    <g
      class="axis-y "
      fill="none"
      font-family="sans-serif"
      font-size="10"
      text-anchor="end"
    >
      <path
        class="domain"
        d="M-6,270.5H0.5V0.5H-6"
        stroke="currentColor"
      />
      <g
        class="tick"
        opacity="1"
        transform="translate(0,270.5)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          0
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,230.7941176470588)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          5
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,191.08823529411762)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          10
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,151.38235294117646)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          15
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,111.67647058823528)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          20
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,71.97058823529412)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          25
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,32.264705882352956)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          30
        </text>
      </g>
    </g>
    <g
      class="cherries-layer"
    >
      <path
        class="line-path bar-line c4"
        d="M72.43902439024387,135L204.14634146341461,119.11764705882354L335.8536585365853,127.05882352941177L467.56097560975604,254.11764705882354"
      />
      <g
        class="line-dot-group"
      >
        <circle
          class="bar-line c5"
          color="rgb(152,0,67)"
          cx="72.43902439024387"
          cy="135"
          r="6"
        />
        <circle
          class="bar-line c5"
          color="rgb(152,0,67)"
          cx="204.14634146341461"
          cy="119.11764705882354"
          r="6"
        />
        <circle
          class="bar-line c5"
          color="rgb(152,0,67)"
          cx="335.8536585365853"
          cy="127.05882352941177"
          r="6"
        />
        <circle
          class="bar-line c5"
          color="rgb(152,0,67)"
          cx="467.56097560975604"
          cy="254.11764705882354"
          r="6"
        />
      </g>
    </g>
    <g
      class="dates-layer"
    >
      <path
        class="line-path bar-line c6"
        d="M72.43902439024387,262.05882352941177L204.14634146341461,150.88235294117646L335.8536585365853,198.52941176470588L467.56097560975604,166.76470588235293"
      />
      <g
        class="line-dot-group"
      >
        <circle
          class="bar-line c7"
          color="rgb(221,28,119)"
          cx="72.43902439024387"
          cy="262.05882352941177"
          r="6"
        />
        <circle
          class="bar-line c7"
          color="rgb(221,28,119)"
          cx="204.14634146341461"
          cy="150.88235294117646"
          r="6"
        />
        <circle
          class="bar-line c7"
          color="rgb(221,28,119)"
          cx="335.8536585365853"
          cy="198.52941176470588"
          r="6"
        />
        <circle
          class="bar-line c7"
          color="rgb(221,28,119)"
          cx="467.56097560975604"
          cy="166.76470588235293"
          r="6"
        />
      </g>
    </g>
  </g>
</svg>
`;

exports[`BarLine with Title, X label, Y label 1`] = `
.c7 {
  fill: rgb(152,0,67);
}

.c9 {
  fill: rgb(221,28,119);
}

.c2 {
  text-anchor: middle;
}

.c3 {
  text-anchor: middle;
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
}

.c6 {
  fill: none;
  stroke: rgb(152,0,67);
  stroke-width: 3;
  pointer-events: none;
}

.c8 {
  fill: none;
  stroke: rgb(221,28,119);
  stroke-width: 3;
  pointer-events: none;
}

.c4 {
  fill: rgb(8,104,172);
}

.c4:hover {
  fill: rgb(0,84,152);
}

.c5 {
  fill: rgb(67,162,202);
}

.c5:hover {
  fill: rgb(47,142,182);
}

.c0 {
  height: 360px;
  width: 640px;
}

.c1 {
  font-size: 1.5em;
  text-anchor: middle;
}

<svg
  baseProfile="full"
  class="silky-charts c0"
  id="silky-charts_bar-line-12"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    class="silky-charts-container "
    transform="translate(50, 40)"
  >
    <text
      class="chart-title c1"
      width="540"
      x="270"
      y="10"
    >
      Test title
    </text>
    <text
      class="x-axis-label c2"
      height="270"
      width="540"
      x="270"
      y="290"
    >
      Test X label
    </text>
    <text
      class="y-axis-label c3"
      height="270"
      width="540"
      x="-135"
      y="-16"
    >
      Test Y label
    </text>
    <g
      class="apples-layer"
    >
      <rect
        class="bar c4"
        height="111.1764705882353"
        width="118.53658536585367"
        x="144.87804878048777"
        y="158.8235294117647"
      />
      <rect
        class="bar c4"
        height="135"
        width="118.53658536585367"
        x="276.5853658536585"
        y="135"
      />
      <rect
        class="bar c4"
        height="142.94117647058823"
        width="118.53658536585367"
        x="13.170731707317032"
        y="127.05882352941177"
      />
      <rect
        class="bar c4"
        height="111.1764705882353"
        width="118.53658536585367"
        x="408.29268292682923"
        y="158.8235294117647"
      />
    </g>
    <g
      class="bananas-layer"
    >
      <rect
        class="bar c5"
        height="111.1764705882353"
        width="118.53658536585367"
        x="144.87804878048777"
        y="47.64705882352942"
      />
      <rect
        class="bar c5"
        height="103.23529411764707"
        width="118.53658536585367"
        x="276.5853658536585"
        y="31.764705882352956"
      />
      <rect
        class="bar c5"
        height="127.05882352941177"
        width="118.53658536585367"
        x="13.170731707317032"
        y="0"
      />
      <rect
        class="bar c5"
        height="103.23529411764707"
        width="118.53658536585367"
        x="408.29268292682923"
        y="55.58823529411765"
      />
    </g>
    <g
      class="axis-x "
      fill="none"
      font-family="sans-serif"
      font-size="10"
      text-anchor="middle"
      transform="translate(0, 270)"
    >
      <path
        class="domain"
        d="M0.5,6V0.5H540.5V6"
        stroke="currentColor"
      />
      <g
        class="tick"
        opacity="1"
        transform="translate(72.43902439024387,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          foo
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(204.14634146341461,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          bar
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(335.8536585365853,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          baz
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(467.56097560975604,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          qux
        </text>
      </g>
    </g>
    <g
      class="axis-y "
      fill="none"
      font-family="sans-serif"
      font-size="10"
      text-anchor="end"
    >
      <path
        class="domain"
        d="M-6,270.5H0.5V0.5H-6"
        stroke="currentColor"
      />
      <g
        class="tick"
        opacity="1"
        transform="translate(0,270.5)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          0
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,230.7941176470588)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          5
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,191.08823529411762)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          10
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,151.38235294117646)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          15
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,111.67647058823528)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          20
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,71.97058823529412)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          25
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,32.264705882352956)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          30
        </text>
      </g>
    </g>
    <g
      class="cherries-layer"
    >
      <path
        class="line-path bar-line c6"
        d="M72.43902439024387,135L204.14634146341461,119.11764705882354L335.8536585365853,127.05882352941177L467.56097560975604,254.11764705882354"
      />
      <g
        class="line-dot-group"
      >
        <circle
          class="bar-line c7"
          color="rgb(152,0,67)"
          cx="72.43902439024387"
          cy="135"
          r="6"
        />
        <circle
          class="bar-line c7"
          color="rgb(152,0,67)"
          cx="204.14634146341461"
          cy="119.11764705882354"
          r="6"
        />
        <circle
          class="bar-line c7"
          color="rgb(152,0,67)"
          cx="335.8536585365853"
          cy="127.05882352941177"
          r="6"
        />
        <circle
          class="bar-line c7"
          color="rgb(152,0,67)"
          cx="467.56097560975604"
          cy="254.11764705882354"
          r="6"
        />
      </g>
    </g>
    <g
      class="dates-layer"
    >
      <path
        class="line-path bar-line c8"
        d="M72.43902439024387,262.05882352941177L204.14634146341461,150.88235294117646L335.8536585365853,198.52941176470588L467.56097560975604,166.76470588235293"
      />
      <g
        class="line-dot-group"
      >
        <circle
          class="bar-line c9"
          color="rgb(221,28,119)"
          cx="72.43902439024387"
          cy="262.05882352941177"
          r="6"
        />
        <circle
          class="bar-line c9"
          color="rgb(221,28,119)"
          cx="204.14634146341461"
          cy="150.88235294117646"
          r="6"
        />
        <circle
          class="bar-line c9"
          color="rgb(221,28,119)"
          cx="335.8536585365853"
          cy="198.52941176470588"
          r="6"
        />
        <circle
          class="bar-line c9"
          color="rgb(221,28,119)"
          cx="467.56097560975604"
          cy="166.76470588235293"
          r="6"
        />
      </g>
    </g>
  </g>
</svg>
`;

exports[`BarLine with X label rotation 1`] = `
.c4 {
  fill: rgb(152,0,67);
}

.c6 {
  fill: rgb(221,28,119);
}

.c3 {
  fill: none;
  stroke: rgb(152,0,67);
  stroke-width: 3;
  pointer-events: none;
}

.c5 {
  fill: none;
  stroke: rgb(221,28,119);
  stroke-width: 3;
  pointer-events: none;
}

.c1 {
  fill: rgb(8,104,172);
}

.c1:hover {
  fill: rgb(0,84,152);
}

.c2 {
  fill: rgb(67,162,202);
}

.c2:hover {
  fill: rgb(47,142,182);
}

.c0 {
  height: 360px;
  width: 640px;
}

<svg
  baseProfile="full"
  class="silky-charts c0"
  id="silky-charts_bar-line-18"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    class="silky-charts-container "
    transform="translate(50, 40)"
  >
    <g
      class="apples-layer"
    >
      <rect
        class="bar c1"
        height="111.1764705882353"
        width="118.53658536585367"
        x="144.87804878048777"
        y="158.8235294117647"
      />
      <rect
        class="bar c1"
        height="135"
        width="118.53658536585367"
        x="276.5853658536585"
        y="135"
      />
      <rect
        class="bar c1"
        height="142.94117647058823"
        width="118.53658536585367"
        x="13.170731707317032"
        y="127.05882352941177"
      />
      <rect
        class="bar c1"
        height="111.1764705882353"
        width="118.53658536585367"
        x="408.29268292682923"
        y="158.8235294117647"
      />
    </g>
    <g
      class="bananas-layer"
    >
      <rect
        class="bar c2"
        height="111.1764705882353"
        width="118.53658536585367"
        x="144.87804878048777"
        y="47.64705882352942"
      />
      <rect
        class="bar c2"
        height="103.23529411764707"
        width="118.53658536585367"
        x="276.5853658536585"
        y="31.764705882352956"
      />
      <rect
        class="bar c2"
        height="127.05882352941177"
        width="118.53658536585367"
        x="13.170731707317032"
        y="0"
      />
      <rect
        class="bar c2"
        height="103.23529411764707"
        width="118.53658536585367"
        x="408.29268292682923"
        y="55.58823529411765"
      />
    </g>
    <g
      class="axis-x "
      fill="none"
      font-family="sans-serif"
      font-size="10"
      text-anchor="middle"
      transform="translate(0, 270)"
    >
      <path
        class="domain"
        d="M0.5,6V0.5H540.5V6"
        stroke="currentColor"
      />
      <g
        class="tick"
        opacity="1"
        transform="translate(72.43902439024387,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          text-anchor="end"
          transform="translate(-12, 6) rotate(-50)"
          y="9"
        >
          foo
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(204.14634146341461,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          text-anchor="end"
          transform="translate(-12, 6) rotate(-50)"
          y="9"
        >
          bar
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(335.8536585365853,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          text-anchor="end"
          transform="translate(-12, 6) rotate(-50)"
          y="9"
        >
          baz
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(467.56097560975604,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          text-anchor="end"
          transform="translate(-12, 6) rotate(-50)"
          y="9"
        >
          qux
        </text>
      </g>
    </g>
    <g
      class="axis-y "
      fill="none"
      font-family="sans-serif"
      font-size="10"
      text-anchor="end"
    >
      <path
        class="domain"
        d="M-6,270.5H0.5V0.5H-6"
        stroke="currentColor"
      />
      <g
        class="tick"
        opacity="1"
        transform="translate(0,270.5)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          0
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,230.7941176470588)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          5
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,191.08823529411762)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          10
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,151.38235294117646)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          15
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,111.67647058823528)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          20
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,71.97058823529412)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          25
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,32.264705882352956)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          30
        </text>
      </g>
    </g>
    <g
      class="cherries-layer"
    >
      <path
        class="line-path bar-line c3"
        d="M72.43902439024387,135L204.14634146341461,119.11764705882354L335.8536585365853,127.05882352941177L467.56097560975604,254.11764705882354"
      />
      <g
        class="line-dot-group"
      >
        <circle
          class="bar-line c4"
          color="rgb(152,0,67)"
          cx="72.43902439024387"
          cy="135"
          r="6"
        />
        <circle
          class="bar-line c4"
          color="rgb(152,0,67)"
          cx="204.14634146341461"
          cy="119.11764705882354"
          r="6"
        />
        <circle
          class="bar-line c4"
          color="rgb(152,0,67)"
          cx="335.8536585365853"
          cy="127.05882352941177"
          r="6"
        />
        <circle
          class="bar-line c4"
          color="rgb(152,0,67)"
          cx="467.56097560975604"
          cy="254.11764705882354"
          r="6"
        />
      </g>
    </g>
    <g
      class="dates-layer"
    >
      <path
        class="line-path bar-line c5"
        d="M72.43902439024387,262.05882352941177L204.14634146341461,150.88235294117646L335.8536585365853,198.52941176470588L467.56097560975604,166.76470588235293"
      />
      <g
        class="line-dot-group"
      >
        <circle
          class="bar-line c6"
          color="rgb(221,28,119)"
          cx="72.43902439024387"
          cy="262.05882352941177"
          r="6"
        />
        <circle
          class="bar-line c6"
          color="rgb(221,28,119)"
          cx="204.14634146341461"
          cy="150.88235294117646"
          r="6"
        />
        <circle
          class="bar-line c6"
          color="rgb(221,28,119)"
          cx="335.8536585365853"
          cy="198.52941176470588"
          r="6"
        />
        <circle
          class="bar-line c6"
          color="rgb(221,28,119)"
          cx="467.56097560975604"
          cy="166.76470588235293"
          r="6"
        />
      </g>
    </g>
  </g>
</svg>
`;

exports[`BarLine with dates 1`] = `
.c4 {
  fill: rgb(152,0,67);
}

.c6 {
  fill: rgb(221,28,119);
}

.c3 {
  fill: none;
  stroke: rgb(152,0,67);
  stroke-width: 3;
  pointer-events: none;
}

.c5 {
  fill: none;
  stroke: rgb(221,28,119);
  stroke-width: 3;
  pointer-events: none;
}

.c1 {
  fill: rgb(8,104,172);
}

.c1:hover {
  fill: rgb(0,84,152);
}

.c2 {
  fill: rgb(67,162,202);
}

.c2:hover {
  fill: rgb(47,142,182);
}

.c0 {
  height: 360px;
  width: 640px;
}

<svg
  baseProfile="full"
  class="silky-charts c0"
  id="silky-charts_bar-line-2"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    class="silky-charts-container "
    transform="translate(50, 40)"
  >
    <g
      class="apples-layer"
    >
      <rect
        class="bar c1"
        height="142.94117647058823"
        width="118.53658536585367"
        x="13.170731707317032"
        y="127.05882352941177"
      />
      <rect
        class="bar c1"
        height="111.1764705882353"
        width="118.53658536585367"
        x="144.87804878048777"
        y="158.8235294117647"
      />
      <rect
        class="bar c1"
        height="135"
        width="118.53658536585367"
        x="276.5853658536585"
        y="135"
      />
      <rect
        class="bar c1"
        height="111.1764705882353"
        width="118.53658536585367"
        x="408.29268292682923"
        y="158.8235294117647"
      />
    </g>
    <g
      class="bananas-layer"
    >
      <rect
        class="bar c2"
        height="127.05882352941177"
        width="118.53658536585367"
        x="13.170731707317032"
        y="0"
      />
      <rect
        class="bar c2"
        height="111.1764705882353"
        width="118.53658536585367"
        x="144.87804878048777"
        y="47.64705882352942"
      />
      <rect
        class="bar c2"
        height="103.23529411764707"
        width="118.53658536585367"
        x="276.5853658536585"
        y="31.764705882352956"
      />
      <rect
        class="bar c2"
        height="103.23529411764707"
        width="118.53658536585367"
        x="408.29268292682923"
        y="55.58823529411765"
      />
    </g>
    <g
      class="axis-x "
      fill="none"
      font-family="sans-serif"
      font-size="10"
      text-anchor="middle"
      transform="translate(0, 270)"
    >
      <path
        class="domain"
        d="M0.5,6V0.5H540.5V6"
        stroke="currentColor"
      />
      <g
        class="tick"
        opacity="1"
        transform="translate(72.43902439024387,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          Sun 30
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(204.14634146341461,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          Mon 31
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(335.8536585365853,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          Tue 01
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(467.56097560975604,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          Wed 02
        </text>
      </g>
    </g>
    <g
      class="axis-y "
      fill="none"
      font-family="sans-serif"
      font-size="10"
      text-anchor="end"
    >
      <path
        class="domain"
        d="M-6,270.5H0.5V0.5H-6"
        stroke="currentColor"
      />
      <g
        class="tick"
        opacity="1"
        transform="translate(0,270.5)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          0
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,230.7941176470588)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          5
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,191.08823529411762)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          10
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,151.38235294117646)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          15
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,111.67647058823528)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          20
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,71.97058823529412)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          25
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,32.264705882352956)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          30
        </text>
      </g>
    </g>
    <g
      class="cherries-layer"
    >
      <path
        class="line-path bar-line c3"
        d="M72.43902439024387,135L204.14634146341461,119.11764705882354L335.8536585365853,127.05882352941177L467.56097560975604,254.11764705882354"
      />
      <g
        class="line-dot-group"
      >
        <circle
          class="bar-line c4"
          color="rgb(152,0,67)"
          cx="72.43902439024387"
          cy="135"
          r="6"
        />
        <circle
          class="bar-line c4"
          color="rgb(152,0,67)"
          cx="204.14634146341461"
          cy="119.11764705882354"
          r="6"
        />
        <circle
          class="bar-line c4"
          color="rgb(152,0,67)"
          cx="335.8536585365853"
          cy="127.05882352941177"
          r="6"
        />
        <circle
          class="bar-line c4"
          color="rgb(152,0,67)"
          cx="467.56097560975604"
          cy="254.11764705882354"
          r="6"
        />
      </g>
    </g>
    <g
      class="dates-layer"
    >
      <path
        class="line-path bar-line c5"
        d="M72.43902439024387,262.05882352941177L204.14634146341461,150.88235294117646L335.8536585365853,198.52941176470588L467.56097560975604,166.76470588235293"
      />
      <g
        class="line-dot-group"
      >
        <circle
          class="bar-line c6"
          color="rgb(221,28,119)"
          cx="72.43902439024387"
          cy="262.05882352941177"
          r="6"
        />
        <circle
          class="bar-line c6"
          color="rgb(221,28,119)"
          cx="204.14634146341461"
          cy="150.88235294117646"
          r="6"
        />
        <circle
          class="bar-line c6"
          color="rgb(221,28,119)"
          cx="335.8536585365853"
          cy="198.52941176470588"
          r="6"
        />
        <circle
          class="bar-line c6"
          color="rgb(221,28,119)"
          cx="467.56097560975604"
          cy="166.76470588235293"
          r="6"
        />
      </g>
    </g>
  </g>
</svg>
`;

exports[`BarLine with source 1`] = `
.c5 {
  fill: rgb(152,0,67);
}

.c7 {
  fill: rgb(221,28,119);
}

.c4 {
  fill: none;
  stroke: rgb(152,0,67);
  stroke-width: 3;
  pointer-events: none;
}

.c6 {
  fill: none;
  stroke: rgb(221,28,119);
  stroke-width: 3;
  pointer-events: none;
}

.c2 {
  fill: rgb(8,104,172);
}

.c2:hover {
  fill: rgb(0,84,152);
}

.c3 {
  fill: rgb(67,162,202);
}

.c3:hover {
  fill: rgb(47,142,182);
}

.c1 {
  font-size: 0.8em;
  font-style: italic;
  text-anchor: end;
}

.c0 {
  height: 360px;
  width: 640px;
}

<svg
  baseProfile="full"
  class="silky-charts c0"
  id="silky-charts_bar-line-14"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    class="silky-charts-container "
    transform="translate(50, 40)"
  >
    <text
      class="data-source c1"
      height="270"
      width="540"
      x="540"
      y="270"
    >
      Test source
    </text>
    <g
      class="apples-layer"
    >
      <rect
        class="bar c2"
        height="111.1764705882353"
        width="118.53658536585367"
        x="144.87804878048777"
        y="158.8235294117647"
      />
      <rect
        class="bar c2"
        height="135"
        width="118.53658536585367"
        x="276.5853658536585"
        y="135"
      />
      <rect
        class="bar c2"
        height="142.94117647058823"
        width="118.53658536585367"
        x="13.170731707317032"
        y="127.05882352941177"
      />
      <rect
        class="bar c2"
        height="111.1764705882353"
        width="118.53658536585367"
        x="408.29268292682923"
        y="158.8235294117647"
      />
    </g>
    <g
      class="bananas-layer"
    >
      <rect
        class="bar c3"
        height="111.1764705882353"
        width="118.53658536585367"
        x="144.87804878048777"
        y="47.64705882352942"
      />
      <rect
        class="bar c3"
        height="103.23529411764707"
        width="118.53658536585367"
        x="276.5853658536585"
        y="31.764705882352956"
      />
      <rect
        class="bar c3"
        height="127.05882352941177"
        width="118.53658536585367"
        x="13.170731707317032"
        y="0"
      />
      <rect
        class="bar c3"
        height="103.23529411764707"
        width="118.53658536585367"
        x="408.29268292682923"
        y="55.58823529411765"
      />
    </g>
    <g
      class="axis-x "
      fill="none"
      font-family="sans-serif"
      font-size="10"
      text-anchor="middle"
      transform="translate(0, 270)"
    >
      <path
        class="domain"
        d="M0.5,6V0.5H540.5V6"
        stroke="currentColor"
      />
      <g
        class="tick"
        opacity="1"
        transform="translate(72.43902439024387,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          foo
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(204.14634146341461,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          bar
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(335.8536585365853,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          baz
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(467.56097560975604,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          qux
        </text>
      </g>
    </g>
    <g
      class="axis-y "
      fill="none"
      font-family="sans-serif"
      font-size="10"
      text-anchor="end"
    >
      <path
        class="domain"
        d="M-6,270.5H0.5V0.5H-6"
        stroke="currentColor"
      />
      <g
        class="tick"
        opacity="1"
        transform="translate(0,270.5)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          0
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,230.7941176470588)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          5
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,191.08823529411762)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          10
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,151.38235294117646)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          15
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,111.67647058823528)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          20
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,71.97058823529412)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          25
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,32.264705882352956)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          30
        </text>
      </g>
    </g>
    <g
      class="cherries-layer"
    >
      <path
        class="line-path bar-line c4"
        d="M72.43902439024387,135L204.14634146341461,119.11764705882354L335.8536585365853,127.05882352941177L467.56097560975604,254.11764705882354"
      />
      <g
        class="line-dot-group"
      >
        <circle
          class="bar-line c5"
          color="rgb(152,0,67)"
          cx="72.43902439024387"
          cy="135"
          r="6"
        />
        <circle
          class="bar-line c5"
          color="rgb(152,0,67)"
          cx="204.14634146341461"
          cy="119.11764705882354"
          r="6"
        />
        <circle
          class="bar-line c5"
          color="rgb(152,0,67)"
          cx="335.8536585365853"
          cy="127.05882352941177"
          r="6"
        />
        <circle
          class="bar-line c5"
          color="rgb(152,0,67)"
          cx="467.56097560975604"
          cy="254.11764705882354"
          r="6"
        />
      </g>
    </g>
    <g
      class="dates-layer"
    >
      <path
        class="line-path bar-line c6"
        d="M72.43902439024387,262.05882352941177L204.14634146341461,150.88235294117646L335.8536585365853,198.52941176470588L467.56097560975604,166.76470588235293"
      />
      <g
        class="line-dot-group"
      >
        <circle
          class="bar-line c7"
          color="rgb(221,28,119)"
          cx="72.43902439024387"
          cy="262.05882352941177"
          r="6"
        />
        <circle
          class="bar-line c7"
          color="rgb(221,28,119)"
          cx="204.14634146341461"
          cy="150.88235294117646"
          r="6"
        />
        <circle
          class="bar-line c7"
          color="rgb(221,28,119)"
          cx="335.8536585365853"
          cy="198.52941176470588"
          r="6"
        />
        <circle
          class="bar-line c7"
          color="rgb(221,28,119)"
          cx="467.56097560975604"
          cy="166.76470588235293"
          r="6"
        />
      </g>
    </g>
  </g>
</svg>
`;

exports[`BarLine with source link 1`] = `
.c6 {
  fill: rgb(152,0,67);
}

.c8 {
  fill: rgb(221,28,119);
}

.c5 {
  fill: none;
  stroke: rgb(152,0,67);
  stroke-width: 3;
  pointer-events: none;
}

.c7 {
  fill: none;
  stroke: rgb(221,28,119);
  stroke-width: 3;
  pointer-events: none;
}

.c3 {
  fill: rgb(8,104,172);
}

.c3:hover {
  fill: rgb(0,84,152);
}

.c4 {
  fill: rgb(67,162,202);
}

.c4:hover {
  fill: rgb(47,142,182);
}

.c1 {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c2 {
  font-size: 0.8em;
  font-style: italic;
  text-anchor: end;
}

.c0 {
  height: 360px;
  width: 640px;
}

<svg
  baseProfile="full"
  class="silky-charts c0"
  id="silky-charts_bar-line-16"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    class="silky-charts-container "
    transform="translate(50, 40)"
  >
    <a
      class="data-source-link c1"
      href="#"
      target="foo"
      title="barLine"
    >
      <text
        class="data-source c2"
        height="270"
        width="540"
        x="540"
        y="270"
      />
    </a>
    <g
      class="apples-layer"
    >
      <rect
        class="bar c3"
        height="111.1764705882353"
        width="118.53658536585367"
        x="144.87804878048777"
        y="158.8235294117647"
      />
      <rect
        class="bar c3"
        height="135"
        width="118.53658536585367"
        x="276.5853658536585"
        y="135"
      />
      <rect
        class="bar c3"
        height="142.94117647058823"
        width="118.53658536585367"
        x="13.170731707317032"
        y="127.05882352941177"
      />
      <rect
        class="bar c3"
        height="111.1764705882353"
        width="118.53658536585367"
        x="408.29268292682923"
        y="158.8235294117647"
      />
    </g>
    <g
      class="bananas-layer"
    >
      <rect
        class="bar c4"
        height="111.1764705882353"
        width="118.53658536585367"
        x="144.87804878048777"
        y="47.64705882352942"
      />
      <rect
        class="bar c4"
        height="103.23529411764707"
        width="118.53658536585367"
        x="276.5853658536585"
        y="31.764705882352956"
      />
      <rect
        class="bar c4"
        height="127.05882352941177"
        width="118.53658536585367"
        x="13.170731707317032"
        y="0"
      />
      <rect
        class="bar c4"
        height="103.23529411764707"
        width="118.53658536585367"
        x="408.29268292682923"
        y="55.58823529411765"
      />
    </g>
    <g
      class="axis-x "
      fill="none"
      font-family="sans-serif"
      font-size="10"
      text-anchor="middle"
      transform="translate(0, 270)"
    >
      <path
        class="domain"
        d="M0.5,6V0.5H540.5V6"
        stroke="currentColor"
      />
      <g
        class="tick"
        opacity="1"
        transform="translate(72.43902439024387,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          foo
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(204.14634146341461,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          bar
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(335.8536585365853,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          baz
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(467.56097560975604,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          qux
        </text>
      </g>
    </g>
    <g
      class="axis-y "
      fill="none"
      font-family="sans-serif"
      font-size="10"
      text-anchor="end"
    >
      <path
        class="domain"
        d="M-6,270.5H0.5V0.5H-6"
        stroke="currentColor"
      />
      <g
        class="tick"
        opacity="1"
        transform="translate(0,270.5)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          0
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,230.7941176470588)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          5
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,191.08823529411762)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          10
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,151.38235294117646)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          15
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,111.67647058823528)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          20
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,71.97058823529412)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          25
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,32.264705882352956)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          30
        </text>
      </g>
    </g>
    <g
      class="cherries-layer"
    >
      <path
        class="line-path bar-line c5"
        d="M72.43902439024387,135L204.14634146341461,119.11764705882354L335.8536585365853,127.05882352941177L467.56097560975604,254.11764705882354"
      />
      <g
        class="line-dot-group"
      >
        <circle
          class="bar-line c6"
          color="rgb(152,0,67)"
          cx="72.43902439024387"
          cy="135"
          r="6"
        />
        <circle
          class="bar-line c6"
          color="rgb(152,0,67)"
          cx="204.14634146341461"
          cy="119.11764705882354"
          r="6"
        />
        <circle
          class="bar-line c6"
          color="rgb(152,0,67)"
          cx="335.8536585365853"
          cy="127.05882352941177"
          r="6"
        />
        <circle
          class="bar-line c6"
          color="rgb(152,0,67)"
          cx="467.56097560975604"
          cy="254.11764705882354"
          r="6"
        />
      </g>
    </g>
    <g
      class="dates-layer"
    >
      <path
        class="line-path bar-line c7"
        d="M72.43902439024387,262.05882352941177L204.14634146341461,150.88235294117646L335.8536585365853,198.52941176470588L467.56097560975604,166.76470588235293"
      />
      <g
        class="line-dot-group"
      >
        <circle
          class="bar-line c8"
          color="rgb(221,28,119)"
          cx="72.43902439024387"
          cy="262.05882352941177"
          r="6"
        />
        <circle
          class="bar-line c8"
          color="rgb(221,28,119)"
          cx="204.14634146341461"
          cy="150.88235294117646"
          r="6"
        />
        <circle
          class="bar-line c8"
          color="rgb(221,28,119)"
          cx="335.8536585365853"
          cy="198.52941176470588"
          r="6"
        />
        <circle
          class="bar-line c8"
          color="rgb(221,28,119)"
          cx="467.56097560975604"
          cy="166.76470588235293"
          r="6"
        />
      </g>
    </g>
  </g>
</svg>
`;
